<resources>
    <string name="app_name">School Planner</string>
    <string name="register_link">Ещё не зарегистрированы?</string>
    <string name="login_link">Войти</string>
    <string name="login_hint_name">Логин</string>
    <string name="login_hint_password">Пароль</string>
    <string name="login_text_enter">Войти</string>
    <string name="register_next_step">Далее</string>
    <string name="login_text_forgot_pass">Забыли пароль?</string>
    <string name="register_hint_pass_retry">Повторите пароль</string>
    <string name="register_hint_name">Придумайте логин</string>
    <string name="register_hint_pass">Придумайте пароль</string>
    <string name="register_hint_email">Введите email</string>
    <string name="profile_button_submit">Подтвердить</string>
    <string name="login_text_rem_me">Запомнить меня</string>
    <string name="profile_hint_fn">Имя</string>
    <string name="profile_hint_ln">Фамилия</string>
    <string name="profile_hint_mn">Отчество</string>
    <string name="failure_request">Произошла ошибка на сервере</string>
    <string name="dialog_error_title">Ошибка</string>
    <string name="dialog_submit">Ок</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nav_task">Задачи</string>
    <string name="nav_logout">Выйти из аккаунта</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_task_edit">Отправить задачу</string>
    <string name="nav_task_detail">Описание задачи</string>
    <string name="nav_settings_user">Настройки пользователя</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Имя Фамилия</string>
    <string name="nav_header_subtitle">Должность</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="task_edit_hint_title">Название</string>
    <string name="task_edit_hint_description">Описание</string>
    <string name="task_edit_btn_date_picker">Выберите дату</string>
    <string name="task_edit_btn_receiver_picker">Выберите получателей</string>
    <string name="task_edit_btn_send">Отправить</string>
    <string name="action_settings">Settings</string>
    <string name="auth_register">Регистрация</string>
    <string name="auth_login">Логин</string>
    <string name="auth">Authorization</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_task">Задачи</string>
    <string name="avatar_description">Фото профиля</string>
    <string name="settings_logout">Выйти из аккаунта</string>
    <string name="settings_change_email">Изменить почту</string>
    <string name="settings_change_password">Изменить пароль</string>
    <string name="settings_change_school">Поменять школу</string>
    <string name="profile_class_choice">Выбрать класс</string>
    <string name="name_placeholder">%1$s %2$s</string>
    <string name="header_name_placeholder">%1$s %2$s</string>
    <string name="task_detail_files_list">Прикрепленные файлы:</string>
    <string name="action_about">О приложении</string>
    <string name="item_delete">Удалить</string>
    <string name="menu_action_send">Send</string>
    <string name="action_submit">Подтвердить</string>
    <string name="position_placeholder">%1$s %2$s</string>
    <string name="warning_action_delete">Вы действительно хотите удалить %1$s? После подтверждение, действие будет невозможно отменить.</string>
    <string name="task_action_delete">Удалить</string>
    <string name="user_settings">Аккаунт</string>
    <string name="dialog_change_email_current_email">Ваш текущий адрес:</string>
    <string name="dialog_change_password_old_password_hint">Старый пароль</string>
    <string name="dialog_change_password_new_password_hint">Новый пароль</string>
    <string name="dialog_change_password_new_password_retry_hint">Повторите пароль</string>
    <string name="settings_info_user">Информация о аккаунте</string>
    <string name="settings_info_user_name">Имя аккаунта: %1$s</string>
    <string name="settings_info_user_email">Электронная почта: %1$s</string>
    <string name="settings_info_user_school">Прикрепленная школа: %1$s</string>
    <string name="task_action_set_status">Выполненно</string>
    <string name="item_status">Выполненно</string>
    <string name="check_license">Я принимаю лицензионное соглашение</string>


</resources>
