<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/settings_change_password"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edOldPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dialog_change_password_old_password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNewPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dialog_change_password_new_password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNewPassRetry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/dialog_change_password_new_password_retry_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>