<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_margin="8dp">
    <TextView
            android:id="@+id/tvProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:visibility="gone"/>
    <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_avatar_placeholder_black_24dp"
            android:contentDescription="@string/avatar_description"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            tools:targetApi="lollipop">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edFN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/profile_hint_fn"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutLN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutFN"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edLN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/profile_hint_ln"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutMN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutLN"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edMN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/profile_hint_mn"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
            android:id="@+id/spinnerPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutMN"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/btnClassChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinnerPosition"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/profile_class_choice"/>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnClassChoice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/profile_button_submit"/>



</androidx.constraintlayout.widget.ConstraintLayout>