<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/routes"
            app:startDestination="@id/nav_task">

    <fragment
            android:id="@+id/nav_profile"
            android:name="com.njves.schoolnetwork.fragments.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile"/>

    <fragment
            android:id="@+id/nav_task"
            android:name="com.njves.schoolnetwork.fragments.TaskFragment"
            android:label="@string/menu_task"
            tools:layout="@layout/fragment_task">
        <action
                android:id="@+id/action_nav_task_to_nav_task_edit"
                app:destination="@id/nav_task_edit"/>
        <action
                android:id="@+id/action_nav_task_to_nav_task_detail"
                app:destination="@id/nav_task_detail"/>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.njves.schoolnetwork.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings"
        />

    <fragment
            android:id="@+id/nav_task_edit"
            android:name="com.njves.schoolnetwork.fragments.TaskEditFragment"
            android:label="TaskEdit"
            tools:layout="@layout/fragment_task_edit"
            >
    </fragment>

    <fragment
            android:id="@+id/nav_task_detail"
            android:name="com.njves.schoolnetwork.fragments.TaskDetailFragment"
            android:label="TaskDetail"
            tools:layout="@layout/fragment_task_detail"/>

</navigation>