<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:padding="16dp">
        <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>
    <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_edit_hint_title"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layoutTitle"
                app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_edit_hint_description"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_edit_btn_date_picker"
                app:layout_constraintTop_toBottomOf="@id/layoutDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReceivers"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:layout_constraintTop_toBottomOf="@id/btnDatePicker"/>
        <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Подтвердить"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

